--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -1,6 +1,6 @@
 $body-bg: #f2f2f2;
-$primary: #3BA5DC;
-$secondary: #FF3697;
+$primary: #97bdb2;
+$secondary: #636e72;
 $danger: #EB5757;
 $success: #27AE60;
 $warning: #FF7F50;
